# hackathon_atx_2025

./: .gitignore  README.md  criteria.db  package-lock.json  package.json
.devcontainer/: devcontainer.json  oncreate.zsh  poetry-auto-activate.zsh
.github/instructions/: planning.instructions.md  python.instructions.md  react.instructions.md
.github/workflows/: agent-docker-build-push.yaml  api-docker-build.yaml  criteria-api-docker-build-push.yaml  webapp-docker-build-push.yaml
apps/: criteria.db  docker-compose.yml
apps/agent/: .dockerignore  .env.example  .pylintrc  Dockerfile  EVALUATION_README.md  INTEGRATION_SUMMARY.md  README.md  config.py  curl_examples.sh  main.py  pyproject.toml  test_batch_evaluation.py  test_integration.py  test_search_integration.py
apps/agent/models/: __init__.py  invoke.py
apps/agent/prompts/: __init__.py  evaluation_prompts.py
apps/agent/routes/: __init__.py  evaluate.py  evaluation.py  invoke.py
apps/agent/sample_data/: tv_rubric.json
apps/agent/seed/: __init__.py  seed_data.py
apps/agent/services/: __init__.py  chain_service.py  consensus_evaluation.py  criteria_bridge.py  deterministic_analyzer.py  evaluation_service.py  local_search_service.py  search_service.py
apps/candidate_api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/candidate_api/app/: config.py  main.py
apps/candidate_api/app/models/: candidate.py
apps/candidate_api/app/routes/: candidates.py
apps/candidate_api/app/services/: candidate_service.py  material_service.py
apps/candidate_api/app/utils/: cosmos_base.py
apps/candidate_api/tests/: test_candidates.py
apps/criteria_api/: .env.example  Dockerfile  README.md  criteria.db  pyproject.toml  requirements.txt
apps/criteria_api/app/: __init__.py  config.py  main.py
apps/criteria_api/app/models/: candidate.py  candidate_orm.py  criteria.py  criteria_orm.py  decision_kit.py  decision_kit_orm.py  evaluation_result.py  evaluation_result_orm.py  rubric.py  rubric_criterion_orm.py  rubric_orm.py
apps/criteria_api/app/routes/: candidates.py  criteria.py  decision_kits.py  rubrics.py
apps/criteria_api/app/seed/: seed_data.py
apps/criteria_api/app/services/: backfill_service.py  candidate_material_service.py  candidate_service.py  criteria_service.py  decision_kit_service.py  evaluation_service.py  rubric_service.py
apps/criteria_api/app/utils/: cosmos.py  db.py
apps/criteria_api/tests/: conftest.py  test_candidate_delete.py  test_candidate_with_decision_kit.py  test_candidates.py  test_criteria.py  test_decision_kits.py  test_rubric_association.py  test_rubric_weights.py  test_rubrics_missing_criteria_id.py  test_weight_preservation_and_steps.py  test_weight_sum_validation.py
apps/functions/: .dockerignore  Dockerfile  local.settings.json.example
apps/upload_client/: README.md  pyproject.toml
apps/upload_client/tests/: test_client.py
apps/upload_client/upload_client/: __init__.py  client.py  exceptions.py
copilot_planning/: README.md  feature-plan-template.md  implementation-plan-template.md
docs/: README.md  azure-resources.md  multi-agent-evaluation.md
evaluation/: README.md  __init__.py  config.py  evaluator.py  llm_judge.py  metrics.py  requirements.md  run_example.py  schema.md  utils.py
hack-ideas/: InfraGuard.md  critiq.md
infra/: README.md  main.bicep  params.dev.json
(+172 files in other folders)
