[tool.poetry]
name = "agent"
version = "0.1.0"
description = "Minimal agent service for invoking Azure OpenAI models"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
openai = "^1.30.0"
pydantic = "^2.7.0"
httpx = "^0.27.0"
pydantic-settings = "^2.7.0"
langchain-core = "^0.2.14"
langchain-openai = "^0.1.23"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.4.0"
pylint = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
