[tool.poetry]
name = "criteria_api"
version = "0.1.0"
description = "RESTful API for managing criteria using Azure CosmosDB"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uuid = "^1.30"
azure-cosmos = "^4.6.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
