[tool.poetry]
name = "criteria_api"
version = "0.1.0"
description = "RESTful API for managing criteria using Azure CosmosDB"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
azure-storage-blob="^12.26.0"
azure-identity="^1.25.0"
fastapi = "^0.110.0"
azure-cosmos = "^4.6.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
pydantic = "^2.11.0"
pydantic-settings = "^2.3.0"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
