[tool.poetry]
name = "upload-client"
version = "0.1.0"
description = "Standalone internal client for Generic Upload Function"
authors = ["Hackathon Team <team@example.com>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "upload_client" } ]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"